--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -2,7 +2,7 @@ name: Prepare release
 
 on:
   pull_request:
-    types: [ labeled ]
+    types: [labeled]
     branches:
       - master
 
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get current version
         run: |
-          CURRENT_VERSION=$(npm view @hichemfantar/pusher-websocket-react-native version)
+          CURRENT_VERSION=$(npm view hichemfantar-pusher-websocket-react-native version)
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
       - uses: actions/checkout@v2
         with:
